--- a/Bonbon/Bonbon/App.config
+++ b/Bonbon/Bonbon/App.config
@@ -1,6 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Bonbon.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <userSettings>
+        <Bonbon.Properties.Settings>
+            <setting name="RunOnStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="FirstTimeRunning" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Monitor1Disable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Monitor2Disable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Monitor3Disable" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Monitor4Disable" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Monitor5Disable" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Bonbon.Properties.Settings>
+    </userSettings>
 </configuration>
